refaktorering (#47)
* refaktorering

* fikse tester

* trekker ut applicationcall fra service laget, lar det ligge i api laget og fikser zosconnectservice wiremock tester

* fikse tester og swagger
