# src/main/kotlin/no/nav/sokos/oppdrag/common/util/LocalDateSerializer.kt
@@ -1,7 +1,6 @@
-package no.nav.sokos.oppdrag.attestasjon.domain
+package no.nav.sokos.oppdrag.common.util
 
 import kotlinx.serialization.KSerializer
-import kotlinx.serialization.Serializable
 import kotlinx.serialization.descriptors.PrimitiveKind
 import kotlinx.serialization.descriptors.PrimitiveSerialDescriptor
 import kotlinx.serialization.descriptors.SerialDescriptor
@@ -9,21 +8,6 @@ import kotlinx.serialization.encoding.Decoder
 import kotlinx.serialization.encoding.Encoder
 import java.time.LocalDate
 import java.time.format.DateTimeFormatter
-
-@Serializable
-data class OppdragslinjePlain(
-    val attestert: Boolean,
-    @Serializable(with = LocalDateSerializer::class)
-    val datoVedtakFom: LocalDate,
-    @Serializable(with = LocalDateSerializer::class)
-    val datoVedtakTom: LocalDate?,
-    val delytelseId: String,
-    val kodeKlasse: String,
-    val linjeId: Int,
-    val oppdragsId: Int,
-    val sats: Double,
-    val typeSats: String,
-)
 
 object LocalDateSerializer : KSerializer<LocalDate> {
     private val formatter = DateTimeFormatter.ISO_LOCAL_DATE
